MASSIVE SYNC from fluxcapacitor/pipeline
Most files are copied straight from fluxcapacitor/pipeline, and the old stuff blown away.  Differences:
- README contains simplified instructions
- Dockerfile builds on fluxcapacitor/pipeline, so is much simpler
- notebook/ was not copied.  Most of those notebooks are not needed.