@@ -3,90 +3,19 @@
 [![Join the chat at https://gitter.im/bythebay/pipeline](https://badges.gitter.im/Join%20Chat.svg)](https://gitter.im/bythebay/pipeline?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)
 Complete Pipeline Training at Big Data Scala By the Bay
 
-We want to create a uniform data pipeline, e.g. tweets, flowing through Akka=>Kafka=>Spark=>Cassandra.  E.g. [Helena Edelson](https://twitter.com/helenaedelson) has a [KillrWeather](https://github.com/killrweather/killrweather) app that can be reused.
+## Pipeline Description
 
-We want to make sure that each system can be setup and the pipeline run from the same repo.  We'll converge on the exact app together.
+Dating ratings data => Akka app => Kafka => Spark Streaming => Cassandra => Dashboard
 
-The training will be a single day, with 5 companies teaching an hour-90 min segment each in sequence, in the above order.  Mesosphere will be underpinning it with Mesos and go first.
+In addition, Spark MLLib, DataFrames will be demonstrated using a combination of the Cassandra real time data plus static Parquet data, on a notebook interface.
 
+## Setup
 
-Kafka Server Setup - Local Only Testing
-===================================
+You will probably need a machine with ~16GB of RAM, the VM will need at least 8GB and need to be configured for multiple cores.
 
-Start Kafka, create the topics and test:
-
-bin/zookeeper-server-start.sh config/zookeeper.properties
-
-bin/kafka-server-start.sh config/server.properties
-
-bin/kafka-create-topic.sh --zookeeper localhost:2181 --replica 1 --partition 1 --topic ratings
-
-bin/kafka-list-topic.sh --zookeeper localhost:2181
-
-bin/kafka-console-producer.sh --broker-list localhost:9092 --topic ratings
-
-bin/kafka-console-consumer.sh --zookeeper localhost:2181 --topic ratings --from-beginning
-
-Kafka Server Setup - Remote Server Setup
-===================================
-
-mkdir runlogs
-
-nohup bin/zookeeper-server-start.sh config/zookeeper.properties > runlogs/zookeeper.log 2> runlogs/zookeeper.err < /dev/null &
-
-nohup bin/kafka-server-start.sh config/server.properties > runlogs/kafka.log 2> runlogs/kafka.err < /dev/null &
-
-bin/kafka-create-topic.sh --zookeeper localhost:2181 --replica 1 --partition 1 --topic acc_data
-
-bin/kafka-list-topic.sh --zookeeper localhost:2181
-
-bin/kafka-console-consumer.sh --zookeeper localhost:2181 --topic acc_data --from-beginning
-
-Setup SBT
-====================================
-
-[Install sbt] (http://www.scala-sbt.org/release/tutorial/Setup.html)
-
-Cassandra Setup
-=====================================
-
-Install Cassandra as usal.  With EC2 the following changes need to be made:
-Modify cassandra.yaml
-Change broadcast_address to be the outside address in EC2  - broadcast_rpc_address: 52.8.63.225
-Modify the seeds to point to other servers
-
-
-Rating Data Analyzer Setup - Local Server
-====================================
-
-sbt run -Dspark.cassandra.connection.host=52.8.63.225 -Dzookeeper.host=localhost:2181
-
-Rating Data Setup - Remote Server
-====================================
-
-on local machine bundle the server for deployment:
-
-sbt assembly
-
-copy target/scala-2.10/SensorAnalyzer-assembly-0.2.0.jar to remote server.
-
-on remote machine:
-
-mkdir runlogs
-
-nohup java  -Dspark.cassandra.connection.host=52.8.63.225 -Dzookeeper.host=localhost:2181 -jar SensorAnalyzer-assembly-0.2.0.jar  > runlogs/analyzer.log 2> runlogs/analyzer.err < /dev/null &
-
-./bin/spark-submit --name "My app" --master local[4] --conf spark.shuffle.spill=false
-  --conf "spark.executor.extraJavaOptions=-XX:+PrintGCDetails -XX:+PrintGCTimeStamps" myApp.jar
-
-
-How to Verify Results in Cassandra
-========================================
-
-* verify result in cqlsh:
-
-dse/bin/cqlsh
-
-cqlsh> use sensors;
-
-cqlsh:test> select * from sensors.acceleration limit 10;
+- Install Docker (on OSX and Windows, use boot2docker)
+- Pull the pipeline image `docker pull bythebay/pipeline`
+- Verify image is downloaded `docker images`
+- Start the image:
+        docker run -it -m 8g -v ~/pipeline/notebooks:/root/pipeline/notebooks -p 30080:80 -p 34042:4042 -p 39160:9160 -p 39042:9042 -p 39200:9200 -p 37077:7077 -p 38080:38080 -p 38081:38081 -p 36060:6060 -p 36061:6061 -p 32181:2181 -p 38090:8090 -p 30000:10000 -p 30070:50070 -p 30090:50090 -p 39092:9092 -p 36066:6066 -p 39000:9000 -p 39999:19999 -p 36081:6081 -p 35601:5601 -p 37979:7979 -p 38989:8989 -p 34040:4040 bythebay/pipeline bash
+- In the bash shell: `cd ~/pipeline && ./bythebay-setup.sh`
